kubernetes/apps/flux-system/flux-operator/app/httproute.yaml
# yaml-language-server: $schema=https://k8s-schemas.erwanleboucher.dev/gateway.networking.k8s.io/httproute_v1.json
---
# yaml-language-server: $schema=https://k8s-schemas.erwanleboucher.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
  namespace: flux-system
spec:
  hostnames:
    - flux.erwanleboucher.dev
  parentRefs:
    - name: kgateway-internal
      namespace: network

  rules:
    - backendRefs:
        - name: flux-operator
          port: 9080
